--- a/config/application-dev.properties
+++ b/config/application-dev.properties
@@ -1,1 +1,12 @@
+spring.main.allow-bean-definition-overriding=true
 PERSISTHA_URL=http://localhost:8083
+#RabbitMQ connection details
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#this is the name of the exchange
+spring.cloud.stream.bindings.output.destination=orders-exchange
+spring.cloud.stream.bindings.output.group=orders-queue
+
