Notification System fix

--- a/config/application-dev.properties
+++ b/config/application-dev.properties
@@ -1,5 +1,15 @@
+security.require-ssl=true
+
+# The format used for the keystore
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:ks.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=hemligt
+
+
 spring.main.allow-bean-definition-overriding=true
-PERSISTHA_URL=http://localhost:8083
+PERSISTHA_URL=https://localhost:8443
 #RabbitMQ connection details
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
