--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,15 @@
   spring:
     main:
       allow-bean-definition-overriding: true
+
+  swagger:
+      paths: /v2/se.atg.service.member.api-docs,/swagger-ui.html,/swagger-resources/**,/webjars/**,/favicon.ico
+
+  keycloak:
+      auth-server-url: https://sso-ssoha.b9ad.pro-us-east-1.openshiftapps.com/auth
+      realm: master
+      resource: getaway
+      ssl-required: "external"
+      confidential-port: 0
+      principal-attribute: preferred_username
+      bearer-only: true
